@@ -4,6 +4,7 @@ serd (1.0.0) unstable;
   * Remove useless character counting from API
   * Use char* for strings in public API
   * Rename SerdChunk to SerdStringView
+  * Make serd_strtod API const-correct
 
  -- David Robillard <d@drobilla.net>  Sat, 19 Jan 2019 13:31:12 +0100
 
